--- a/main.css
+++ b/main.css
@@ -1,6 +1,5 @@
 * {
   box-sizing: border-box;
-  border-radius: 4px;
 }
 
 nav li {
@@ -24,11 +23,21 @@ nav li {
 }
 
 body {
-  background-color: #F7F8FA;
+  height: 100vh;
+  background-image: url("./images/mood-lighting-cabin.jpg");
+  background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";  
   margin: 0 auto;
+  background-color: #00416B;
+  background-blend-mode: multiply;
 }
 
 .none {
   display: none;
+}
+
+ul {
+  padding: 0;
 }
