--- a/navbar.css
+++ b/navbar.css
@@ -2,10 +2,6 @@ a {
   text-decoration: none;
 }
 
-.nav-list > * {
-  display: none;
-}
-
 nav li {
   padding: 0.5em;
   border: thin black;
@@ -14,7 +10,7 @@ nav li {
 nav div:first-child {
   height: 3em;
   width: 100%;
-  background: gray;
+  background: white;
 }
 
 nav div:first-child {
@@ -33,13 +29,11 @@ nav img {
   vertical-align:middle;
 }
 
-.active > * {
-  display: block;
+.active {
+  background-color: white;
 }
 
-
-
-.sub-item {
+.hide {
   display: none;
 }
 
@@ -48,10 +42,36 @@ nav img {
 }
 
 .nav-list {
+  transition: width 1s linear 2s;
+  margin: 0 0.5em 0 0.5em;
+}
+
+.nav-list li {
+}
+
+.nav-list li a {
+  text-decoration: none;
+  color: white;
+}
+
+.parent-nav li {
+  font-size: 1.5em;
+  font-style: bold;
+
+}
+
+.reporting-item {
+  font-size: 0.8em;
+  font-style: light;
+}
+
+.overflow-menu {
+  display: none;
+}
+
+.flex-col {
   display: flex;
   flex-direction: column;
-  border: dotted solid;
-  transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55)
 }
 
 .nav-list li:nth-child(1) {
@@ -70,28 +90,30 @@ nav img {
   -webkit-transition-delay: 0.25s; 
 }
 
-
-
 .bottom-nav {
   position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: blue;
-  height: 80px;
+  background-color: #00416B;
+  height: 6em;
   display: flex;
   flex-wrap: nowrap;
-    justify-content: space-around;
+  justify-content: space-around;
+  margin-bottom: 0;
+  padding: 0 0.5em 0 0.5em;
 }
 
 .bottom-nav li a {
-  padding-top: 0.25em;
+  padding: 1em 0 0 0;
 }
 
 .bottom-nav li {
-  display:inline-block;
   width: 25%;
   font-size: 0.8em;
+  font-style: bold;
+  letter-spacing: 0.1em;
+  text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -107,7 +129,7 @@ nav img {
   color: white;
   text-decoration: none;
   text-transform: uppercase;
-
+  font-size: 0.8em;
 }
 
 .burger-menu {
@@ -157,4 +179,10 @@ nav img {
 
 .open-close li { 
   margin-right: 168px; 
+}
+
+.parent-menu:after {
+  content:url('./images/plus.svg');
+  margin-left: 4px;
+  display: inline;
 }
