--- a/navbar.css
+++ b/navbar.css
@@ -66,7 +66,8 @@ nav img {
   margin: 1em;
 }
 
-.nav-list li {
+.nav-list > li {
+  font-size: 1.3em;
 }
 
 .nav-list li a {
@@ -74,15 +75,15 @@ nav img {
   color: white;
 }
 
-.parent-nav li {
+.parent-nav > li {
   font-size: 1.5em;
   font-weight: bold;
 
 }
 
-.reporting-item {
+.reporting-item > a {
   font-size: 0.8em;
-  font-weight: light;
+  font-weight: 300;
 }
 
 .overflow-menu {
@@ -158,7 +159,7 @@ nav img {
 }
 
 .bottom-nav li svg path {
-  fill: lightgray;
+  fill: 300gray;
 }
 
 .burger-menu {
@@ -210,8 +211,9 @@ nav img {
   margin-right: 168px; 
 } */
 
-.parent-menu:after {
+.menu-has-children:after {
   content:url('./images/plus.svg');
-  margin-left: 4px;
+  margin: auto 0 auto 15px;
   display: inline;
+
 }
