--- a/navbar.css
+++ b/navbar.css
@@ -146,11 +146,16 @@ nav img {
 
 .bottom-nav li svg {
   padding: 0.1em;
-  height: 40px;
+  height: 30px;
+  cursor: pointer;
+}
+
+.bottom-nav li button {
+  cursor: pointer;
 }
 
 .bottom-nav li svg path {
-  fill: lightgray;
+  fill: gray;
  
 }
 
@@ -215,11 +220,15 @@ nav img {
 
 .bottom-nav li.active a {
   color: white;
-  font-weight: bold;
+  font-weight: 700;
 }
 
 .bottom-nav li.active svg path {
   fill: white;
+}
+  
+.bottom-nav li.active .nav-toggle [class*='burger-'] {
+  background: white;
 }
 
 .sub-parent-nav > li {
