--- a/navbar.css
+++ b/navbar.css
@@ -108,11 +108,10 @@ nav img {
   flex-wrap: nowrap;
   justify-content: space-around;
   margin-bottom: 0;
-  padding: 0 0.5em 0 0.5em;
 }
 
 .bottom-nav li a {
-  padding: 1em 0 0 0;
+  padding: 1em 0.5em 0 0.5em;
 }
 
 .bottom-nav li {
