--- a/styles/main.css
+++ b/styles/main.css
@@ -34,6 +34,11 @@ body {
   background-blend-mode: multiply;
 }
 
+.container {
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
 .none {
   display: none;
 }
@@ -41,15 +46,3 @@ body {
 ul {
   padding: 0;
 }
-
-/* 
-.container {
-  max-width: 375px; 
-  max-height: 812px;
-  margin: 0 auto;
-  box-shadow: 0px 4px 10px #00416B;
-}
-
-.in-container {
-  width: 100%;
-} */
