updates to the url string on the background image

--- a/styles/main.css
+++ b/styles/main.css
@@ -24,7 +24,7 @@ nav li {
 
 body {
   height: 100vh;
-  background-image: url("./images/mood-lighting-cabin.jpg");
+  background-image: url(".././images/mood-lighting-cabin.jpg");
   background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
